--- a/packages/model/tsconfig-build.json
+++ b/packages/model/tsconfig-build.json
@@ -25,6 +25,6 @@
     "annotateForClosureCompiler": true,
     "strictMetadataEmit": true,
     "flatModuleOutFile": "index.js",
-    "flatModuleId": "AODBService"
+    "flatModuleId": "aoDBModel"
   }
 }
