--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ao-db",
   "scripts": {
-    "link.lib": "lerna run link && yarn link ao-db-core ao-db-node",
+    "link.lib": "yarn link ao-db-core ao-db-node",
     "build.core": "lerna run build --scope ao-db-core && lerna run build --scope ao-db-node",
     "build.all": "lerna run build --ignore ao-db-core --ignore ao-db-node",
     "build": "yarn run build.core && yarn run build.all"
@@ -15,6 +15,10 @@
     "@angular/platform-browser-dynamic": "4.1.3",
     "@angular/platform-server": "4.1.3",
     "@compodoc/compodoc": "^1.0.0-beta.10",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^2.0.3",
+    "@ngrx/store": "^2.2.2",
+    "@ngrx/store-devtools": "^3.2.3",
     "@types/jasmine": "^2.5.52",
     "@types/node": "^8.0.7",
     "@types/pouchdb-adapter-http": "^6.1.1",
@@ -34,6 +38,7 @@
     "cpx": "^1.5.0",
     "gh-pages": "^1.0.0",
     "hash.js": "^1.0.3",
+    "immutable": "4.0.0-rc.2",
     "jasmine-core": "2.6.4",
     "karma": "1.7.0",
     "karma-chrome-launcher": "^2.1.1",
@@ -42,6 +47,7 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.3",
     "lerna": "^2.0.0-rc.5",
+    "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "npm-scripts-info": "^0.3.6",
     "nyc": "^11.0.3",
@@ -76,7 +82,7 @@
     "typedoc": "^0.7.1",
     "typescript": "~2.3.0",
     "uglify-js": "^3.0.23",
-    "webpack": "^3.0.0",
+    "webpack": "^2.0.0",
     "yargs": "8.0.2",
     "zone.js": "0.8.12"
   }
