--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -4,16 +4,16 @@
   "main": "./bundles/ao-db-service.umd.js",
   "module": "./modules/ao-db-service.es5.js",
   "es2015": "./modules/ao-db-service.js",
+  "typings": "./index.d.ts",
   "scripts": {
     "build": "node ./build.js",
-    "link": "cd build && yarn link",
+    "link": "cd ./build && yarn link",
     "test": "karma start",
     "pack-lib": "npm pack ./build",
     "publish-lib": "npm publish ./build",
     "compodoc": "compodoc -p tsconfig.json",
     "compodoc-serve": "compodoc -s"
   },
-  "typings": "./index.d.ts",
   "devDependencies": {
     "@angular/common": "4.1.3",
     "@angular/compiler": "4.1.3",
