--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ao-db",
   "scripts": {
-    "link.lib": "yarn link ao-db-core ao-db-node",
-    "build.core": "lerna run build --scope ao-db-core && lerna run build --scope ao-db-node",
-    "build.all": "lerna run build --ignore ao-db-core --ignore ao-db-node",
-    "build": "yarn run build.core && yarn run build.all"
+    "link.lib": "yarn link ao-db-core ao-db-node ao-db-model ao-db-ngrx",
+    "build.1": "lerna run build --scope *core && lerna run build --scope *node",
+    "build.2": "lerna run build --scope *model --scope *ngrx",
+    "build.3": "lerna run build --scope *server --scope *service",
+    "build": "yarn run build.1 && yarn run build.2 && yarn run build.3"
   },
   "devDependencies": {
     "@angular/common": "4.1.3",
@@ -22,6 +23,8 @@
     "@types/jasmine": "^2.5.52",
     "@types/node": "^8.0.7",
     "@types/pouchdb-adapter-http": "^6.1.1",
+    "@types/pouchdb-adapter-idb": "^6.1.1",
+    "@types/pouchdb-adapter-websql": "^6.1.1",
     "@types/pouchdb-core": "^6.1.0",
     "@types/pouchdb-find": "^0.10.1",
     "@types/pouchdb-mapreduce": "^6.1.0",
@@ -53,7 +56,9 @@
     "nyc": "^11.0.3",
     "opn-cli": "^3.1.0",
     "pouchdb-adapter-http": "^6.2.0",
+    "pouchdb-adapter-idb": "^6.2.0",
     "pouchdb-adapter-memory": "^6.2.0",
+    "pouchdb-adapter-websql": "^6.2.0",
     "pouchdb-core": "^6.2.0",
     "pouchdb-find": "^6.2.0",
     "pouchdb-mapreduce": "^6.2.0",
@@ -82,7 +87,7 @@
     "typedoc": "^0.7.1",
     "typescript": "~2.3.0",
     "uglify-js": "^3.0.23",
-    "webpack": "^2.0.0",
+    "webpack": "^3.0.0",
     "yargs": "8.0.2",
     "zone.js": "0.8.12"
   }
