--- a/packages/node/tsconfig.json
+++ b/packages/node/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./config/tsconfig.flexible", // also available: "./config/tsconfig.strict"
+  "extends": "./config/tsconfig.flexible",
   "compilerOptions": {
     "target": "es2015",
     "experimentalDecorators": true,
@@ -13,13 +13,13 @@
     "listFiles": false,
     "traceResolution": false,
     "pretty": true,
-    "lib": ["es6", "es2015", "dom"],
+    "lib": ["es6", "es2015", "dom", "es2015.promise"],
     "types": [
       "node"
     ],
-    "baseUrl": ".", // required for "paths"
+    "baseUrl": ".",
     "paths": {
-      "ao-db-node": ["src/index.ts"] // write tests without relative paths
+      "ao-db-node": ["src/index.ts"]
     }
   },
   "include": [
