--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,10 +8,9 @@
   "scripts": {
     "info": "npm-scripts-info",
     "link": "yarn link",
-    "build": "trash build && yarn build:main && yarn build:module",
-    "build:main": "tsc -p tsconfig.json",
+    "build": "trash build && yarn build:main && yarn build:module && yarn build:browser && yarn build:browser-cjs && yarn build:resolve-sourcemaps",
     "build:module": "tsc -p config/exports/tsconfig.module.json",
-    "build:browser-deps": "mkdirp build/temp && browserify node_modules/hash.js/lib/hash.js --standalone hash -o build/temp/hash.js",
+    "build:main": "tsc -p tsconfig.json",
     "build:browser": "rollup -c config/exports/rollup.config.js -f es -o build/browser/index.js",
     "build:browser-cjs": "rollup -c config/exports/rollup.config.js -f cjs -o build/browser/index.cjs.js",
     "build:resolve-sourcemaps": "sorcery -i build/browser/index.js && sorcery -i build/browser/index.cjs.js",
