--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.3",
-    "lerna": "^2.0.0-rc.5",
+    "lerna": "2.0.0-rc.5",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "npm-scripts-info": "^0.3.6",
