--- a/packages/model/package.json
+++ b/packages/model/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ao-db-core",
+  "name": "ao-db-model",
   "version": "1.4.0",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
