--- a/packages/model/tsconfig.json
+++ b/packages/model/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./config/tsconfig.flexible",
+  "extends": "./config/tsconfig.flexible", // also available: "./config/tsconfig.strict"
   "compilerOptions": {
     "target": "es2015",
     "experimentalDecorators": true,
@@ -17,9 +17,9 @@
     "types": [
       "node"
     ],
-    "baseUrl": ".",
+    "baseUrl": ".", // required for "paths"
     "paths": {
-      "ao-db-model": ["src/index.ts"]
+      "ao-db-model": ["src/index.ts"] // write tests without relative paths
     }
   },
   "include": [
