--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -47,7 +47,7 @@
     "tslint": "5.4.3",
     "typescript": "2.3.4",
     "uglify-js": "2.8.29",
-    "webpack": "3.0.0",
+    "webpack": "^3.1.0",
     "yargs": "8.0.2"
   }
 }
