--- a/packages/service/tsconfig-build.json
+++ b/packages/service/tsconfig-build.json
@@ -18,7 +18,8 @@
     ]
   },
   "files": [
-    "public_api.ts"
+    "public_api.ts",
+    "node_modules/zone.js/dist/zone.js.d.ts"
   ],
   "angularCompilerOptions": {
     "skipTemplateCodegen": true,
