--- a/packages/service/tsconfig-build.json
+++ b/packages/service/tsconfig-build.json
@@ -18,8 +18,7 @@
     ]
   },
   "files": [
-    "public_api.ts",
-    "node_modules/zone.js/dist/zone.js.d.ts"
+    "public_api.ts"
   ],
   "angularCompilerOptions": {
     "skipTemplateCodegen": true,
