--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build.3": "lerna run build --scope *server --scope *service",
     "w": "lerna run watch --parallel --scope",
     "b": "lerna run build --parallel --scope",
+    "t": "lerna run test --parallel --scope",
     "build": "yarn run build.1 && yarn run build.2 && yarn run build.3",
     "server": "pouchdb-server --host 0.0.0.0 -p 11111 -m"
   },
@@ -42,17 +43,17 @@
     "codecov": "^2.0.1",
     "codelyzer": "^3.1.1",
     "concurrently": "^3.4.0",
-    "core-js": "2.4.1",
+    "core-js": "^2.4.1",
     "cpx": "^1.5.0",
     "gh-pages": "^1.0.0",
     "hash.js": "^1.0.3",
     "immutable": "4.0.0-rc.2",
-    "jasmine-core": "2.6.4",
-    "karma": "1.7.0",
+    "jasmine-core": "^2.6.4",
+    "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.1.1",
-    "karma-jasmine": "1.1.0",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-spec-reporter": "0.0.31",
+    "karma-jasmine": "^1.1.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "^0.0.31",
     "karma-webpack": "^2.0.3",
     "lerna": "2.0.0-rc.5",
     "lodash": "^4.17.4",
@@ -68,20 +69,20 @@
     "pouchdb-find": "^6.2.0",
     "pouchdb-mapreduce": "^6.2.0",
     "pouchdb-replication": "^6.2.0",
-    "pouchdb-req-http-query": "2.0.0",
+    "pouchdb-req-http-query": "^2.0.0",
     "pouchdb-security": "^2.3.7",
     "pouchdb-server": "^2.3.7",
-    "reflect-metadata": "0.1.10",
-    "rollup": "^0.43.0",
+    "reflect-metadata": "^0.1.10",
+    "rollup": "^0.45.1",
     "rollup-plugin-alias": "^1.2.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-watch": "^4.0.0",
     "rxjs": "^5.4.0",
-    "shelljs": "0.7.8",
+    "shelljs": "^0.7.8",
     "sleep-ms": "^2.0.1",
     "sorcery": "^0.10.0",
-    "source-map-loader": "0.2.1",
+    "source-map-loader": "^0.2.1",
     "standard-version": "^4.0.0",
     "trash-cli": "^1.4.0",
     "ts-loader": "^2.1.0",
@@ -92,7 +93,7 @@
     "typescript": "~2.3.0",
     "uglify-js": "^3.0.23",
     "webpack": "^3.0.0",
-    "yargs": "8.0.2",
-    "zone.js": "0.8.12"
+    "yargs": "^8.0.2",
+    "zone.js": "^0.8.12"
   }
 }
