--- a/packages/model/package.json
+++ b/packages/model/package.json
@@ -37,7 +37,7 @@
   },
   "nyc": {
     "exclude": [
-      "**/spec/**.js",
+      "**/_spec/**.js",
       "build/browser/**"
     ]
   },
@@ -48,7 +48,7 @@
     "source": [
       "test/**/*.js",
       "build/**/*.js",
-      "!build/**/spec/**/*.js"
+      "!build/**/_spec/**/*.js"
     ]
   },
   "dependencies": {},
@@ -65,6 +65,7 @@
     "npm-scripts-info": "^0.3.6",
     "nyc": "^11.0.2",
     "opn-cli": "^3.1.0",
+    "pouchdb-server": "^2.3.7",
     "rollup": "^0.43.0",
     "rollup-plugin-alias": "^1.2.1",
     "rollup-plugin-commonjs": "^8.0.2",
