--- a/package.json
+++ b/package.json
@@ -23,20 +23,20 @@
     "@angular/platform-server": "4.1.3",
     "@compodoc/compodoc": "^1.0.0-beta.10",
     "@ngrx/core": "^1.2.0",
-    "@ngrx/effects": "^2.0.3",
-    "@ngrx/store": "^2.2.2",
-    "@ngrx/store-devtools": "^3.2.3",
+    "@ngrx/effects": "^4.0.1",
+    "@ngrx/store": "^4.0.0",
+    "@ngrx/store-devtools": "^4.0.0",
     "@types/jasmine": "^2.5.52",
     "@types/node": "^8.0.7",
     "@types/pouchdb-adapter-http": "^6.1.1",
     "@types/pouchdb-adapter-idb": "^6.1.1",
     "@types/pouchdb-adapter-websql": "^6.1.1",
     "@types/pouchdb-core": "^6.1.0",
-    "@types/pouchdb-find": "^0.10.1",
+    "@types/pouchdb-find": "^6.3.0",
     "@types/pouchdb-mapreduce": "^6.1.0",
     "@types/pouchdb-replication": "^6.1.0",
     "@types/uglify-js": "^2.6.29",
-    "ava": "^0.20.0",
+    "ava": "^0.21.0",
     "babel-standalone": "^6.25.0",
     "browserify": "^14.3.0",
     "chalk": "^2.0.1",
@@ -55,7 +55,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.31",
     "karma-webpack": "^2.0.3",
-    "lerna": "2.0.0-rc.5",
+    "lerna": "^2.0.0",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "npm-scripts-info": "^0.3.6",
