--- a/package.json
+++ b/package.json
@@ -95,5 +95,8 @@
     "webpack": "^3.0.0",
     "yargs": "^8.0.2",
     "zone.js": "^0.8.12"
+  },
+  "dependencies": {
+    "ao-scripts": "^0.0.2"
   }
 }
