--- a/packages/model/package.json
+++ b/packages/model/package.json
@@ -30,7 +30,8 @@
     "changelog": "standard-version",
     "release": "yarn reset && yarn test && yarn docs:publish && yarn changelog",
     "reset": "git clean -dfx && git reset --hard && yarn",
-    "server": "pouchdb-server --host 0.0.0.0 -p 11111 -m"
+    "server": "pouchdb-server --host 0.0.0.0 -p 11111 -m",
+    "mock": "node ./scripts/import-mock -- --host 0.0.0.0 -p 11111 -m"
   },
   "engines": {
     "node": ">=4"
@@ -51,7 +52,10 @@
       "!build/**/_spec/**/*.js"
     ]
   },
-  "dependencies": {},
+  "dependencies": {
+    "ao-scripts": "^0.0.2",
+    "yargs": "^8.0.2"
+  },
   "devDependencies": {
     "@types/node": "^8.0.7",
     "ava": "^0.20.0",
