--- a/package.json
+++ b/package.json
@@ -92,11 +92,9 @@
     "typedoc": "^0.7.1",
     "typescript": "~2.3.0",
     "uglify-js": "^3.0.23",
-    "webpack": "^3.0.0",
+    "webpack": "^3.4.0",
     "yargs": "^8.0.2",
     "zone.js": "^0.8.12"
   },
-  "dependencies": {
-    "ao-scripts": "^0.0.2"
-  }
+  "dependencies": {}
 }
