--- a/.gitignore
+++ b/.gitignore
@@ -44,5 +44,5 @@ demos/src/**/*.ngfactory.ts
 demos/src/**/*.d.ts
 demos/src/**/*.metadata.json
 demos/src/**/*.css.shim.ts
-
+config.json
 !/yarn.lock
